--- a/bin/corridors/Anthem/Daisy-Anthem/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Anthem/nojournal/bin/mmitss-phase3-master-config.json
@@ -6,13 +6,13 @@
     "IntersectionID" : 22391,
     "RegionalID" : 0,
     "DataCollectorIP": "172.3.1.91",
-    "HMIControllerIP": "10.12.6.56",
+    "HMIControllerIP": "10.12.7.3",
     "MessageDistributorIP": "10.12.6.20",
 	"PriorityRequestGeneratorServerIP": "10.12.6.20",
     "VehicleType" : "Transit",
     "Logging" : "False",
     "SRMTimedOutTime" : 10.0,
-    "SystemPerformanceTimeInterval": 15.0,
+    "SystemPerformanceTimeInterval": 300.0,
     "ApplicationPlatform": "roadside",
     "PortNumber":
 	{
@@ -53,11 +53,11 @@
 	},
     "psid":
         {
-			"map": "E0000017",
+			"map": "8002",
 			"spat": "8002",
-			"rsm": "8003",
-			"srm": "E0000019",
-			"ssm": "E0000020",
+			"rsm": "8002",
+			"srm": "8002",
+			"ssm": "8002",
 			"bsm": "20"
 		},
 	"msgId":
@@ -73,8 +73,8 @@
 		},
 	"SignalController": 
 	{
-		"IpAddress": "10.12.6.104",
-		"NtcipPort": 507,
+		"IpAddress": "10.12.6.17",
+		"NtcipPort": 501,
 		"TimingPlanUpdateInterval_sec": 60,
 		"NtcipBackupTime_sec": 300,
         "Vendor": "Econolite",
