--- a/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
+++ b/bin/corridors/Anthem/Daisy-Dedication/nojournal/bin/mmitss-phase3-master-config.json
@@ -6,12 +6,14 @@
     "IntersectionID" : 45115,
     "RegionalID" : 0,
 	"DataCollectorIP": "172.3.1.91",
-    "HMIControllerIP": "10.12.6.56",
+    "HMIControllerIP": "10.12.7.3",
     "MessageDistributorIP": "10.12.6.20",
 	"PriorityRequestGeneratorServerIP": "10.12.6.20",
-    "VehicleType" : 6,
-    "Logging" : "True",
+    "VehicleType" : "Transit",
+    "Logging" : "False",
     "SRMTimedOutTime" : 10.0,
+    "SystemPerformanceTimeInterval": 300.0,
+    "ApplicationPlatform": "roadside",
     "PortNumber":
 	{
 		"MessageTransceiver":
@@ -39,7 +41,7 @@
 		"MapSPaTBroadcaster": 6053,
 		"DsrcImmediateForwarder": 1516,
         "PriorityRequestServer_SendSSM": 50003,
-        "DataCollector": 30006,
+        "DataCollector": 30002,
         "SnmpEngine": 20020,
 		"SnmpEngineInterface": 20021,
 		"PriorityRequestGeneratorServer": 20022,
@@ -51,11 +53,11 @@
 	},
     "psid":
         {
-			"map": "E0000017",
+			"map": "8002",
 			"spat": "8002",
-			"rsm": "8003",
-			"srm": "E0000019",
-			"ssm": "E0000020",
+			"rsm": "8002",
+			"srm": "8002",
+			"ssm": "8002",
 			"bsm": "20"
 		},
 	"msgId":
@@ -71,8 +73,8 @@
 		},
 	"SignalController": 
 	{
-		"IpAddress": "10.12.6.104",
-		"NtcipPort": 503,
+		"IpAddress": "10.12.6.5",
+		"NtcipPort": 501,
 		"TimingPlanUpdateInterval_sec": 60,
 		"NtcipBackupTime_sec": 300,
         "Vendor": "Econolite",
